new file:   include/BaseContext.h 	new file:   include/LoopManager.h 	new file:   include/board_profile_MEGA2560.h 	new file:   include/build_profiles.h 	new file:   include/button_matrix.h 	new file:   include/config.h 	new file:   include/config_checks.h 	new file:   include/config_features.h 	new file:   include/config_pins.h 	new file:   include/context_registry.h 	new file:   include/context_state.h 	new file:   include/contexts_init.h 	new file:   include/debug.h 	new file:   include/event_bus.h 	new file:   include/event_router.h 	new file:   include/events.h 	new file:   include/hal_buttons_simple.h 	new file:   include/input_codes.h 	new file:   include/manifest.h 	new file:   include/menu_boot.h 	new file:   include/menu_debug.h 	new file:   include/menu_live.h 	new file:   include/menu_main.h 	new file:   include/menu_pattern.h 	new file:   include/menu_save.h 	new file:   include/menu_settings.h 	new file:   include/object_classes.h 	new file:   include/sequencer_core.h 	new file:   include/step_pots_4067.h 	new file:   include/transitions.h 	new file:   include/ui_draw.h 	modified:   platformio.ini 	new file:   src/boot_checks.cpp 	new file:   src/button_matrix.cpp 	new file:   src/config_asserts.cpp 	new file:   src/context_registry.cpp 	new file:   src/context_state.cpp 	new file:   src/contexts_init.cpp 	new file:   src/event_bus.cpp 	new file:   src/event_router.cpp 	new file:   src/hal_buttons_simple.cpp 	modified:   src/main.cpp 	new file:   src/menu_boot.cpp 	new file:   src/menu_debug.cpp 	new file:   src/menu_live.cpp 	new file:   src/menu_main.cpp 	new file:   src/menu_pattern.cpp 	new file:   src/menu_save.cpp 	new file:   src/menu_settings.cpp 	deleted:    src/sanity_check.cpp 	new file:   src/sanity_check.cpp.test 	new file:   src/sequencer_core.cpp 	new file:   src/step_pots_4067.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,27 +7,38 @@ framework = arduino
 board = megaatmega2560
 monitor_speed = 115200
 
-; Global (safe for libs too)
+; GLOBAL (applies to libs too) — keep this clean & forgiving
 build_flags =
   -Os
   -ffunction-sections
   -fdata-sections
   -flto
   -Wl,--gc-sections
+  -Wno-error                 ; <-- never fail build on warnings in libs
+  -Wno-unused-function       ; <-- silence MUI’s helper warnings in libs
+  -Wno-unused-variable
 
-; Only your src/ files (not libraries)
+; ONLY YOUR src/ files get strict warnings
 build_src_flags =
-  -Wall -Wextra -Wundef -Wshadow -Wformat=2 -Wno-sign-compare
+  -Wall
+  -Wextra
+  -Wformat=2
+  ;-Wshadow
+  ; -Wundef                   ; enable later if you want, after you're green
+  -Wunused-function          ; re-enable for your code
+  -Wunused-variable
 
 lib_deps =
   olikraus/U8g2 @ ^2.35.19
-
+   adafruit/Adafruit NeoPixel
+	 arduino-libraries/SD@^1.3.0
 [env:mega2560_debug]
 build_type = debug
 build_flags     = ${env.build_flags} -DDEBUG_SERIAL=1
 build_src_flags = ${env.build_src_flags} -Og
-; build_src_filter = +<src/sanity_check.cpp> -<*>
-
+; build_src_filter = +<sanity_check.cpp>  -<*> FAILS
+; build_src_filter = +<src/sanity_check.cpp>  -<*> FAILS
+; build_src_filter = +<**/sanity_check.cpp> -<*> FAILS
 
 [env:mega2560_release]
 build_type = release
