modified:   include/config_checks.h 	modified:   include/config_pins.h 	modified:   include/context_registry.h 	new file:   include/hal_backlight.h     new file:   include/menu_display.h 	new file:   include/menu_led.h 	new file:   include/settings_store.h 	modified:   platformio.ini 	modified:   src/context_registry.cpp 	modified:   src/contexts_init.cpp 	new file:   src/hal_backlight.cpp 	modified:   src/main.cpp 	modified:   src/menu_boot.cpp 	modified:   src/menu_debug.cpp 	new file:   src/menu_display.cpp 	new file:   src/menu_led.cpp 	modified:   src/menu_main.cpp 	modified:   src/menu_pattern.cpp 	modified:   src/menu_save.cpp 	modified:   src/menu_settings.cpp 	new file:   src/settings_store.cpp 	renamed:    src/sanity_check.cpp.test -> test/sanity_check.cpp.test

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,16 +29,17 @@ build_src_flags =
   -Wunused-variable
 
 lib_deps =
-  olikraus/U8g2 @ ^2.35.19
+  olikraus/u8g2 @ ^2.35.19
    adafruit/Adafruit NeoPixel
 	 arduino-libraries/SD@^1.3.0
 [env:mega2560_debug]
 build_type = debug
 build_flags     = ${env.build_flags} -DDEBUG_SERIAL=1
 build_src_flags = ${env.build_src_flags} -Og
-; build_src_filter = +<sanity_check.cpp>  -<*> FAILS
-; build_src_filter = +<src/sanity_check.cpp>  -<*> FAILS
-; build_src_filter = +<**/sanity_check.cpp> -<*> FAILS
+;build_src_filter =
+ ; +<main.cpp>
+  ;+<menu_main.cpp>
+  ;-<*>
 
 [env:mega2560_release]
 build_type = release
